Allow security manager in IntelliJ unit tests
If you configure IntelliJ to use JDK 21 then all unit tests will fail to
run in the IDE when attempting to set the security manager in the test
bootstrap code. This change configures all tests to include the required
VM argument to enable the security manager.

Signed-off-by: Andrew Ross <andrross@amazon.com>